--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "gulp-jade": "*",
     "gulp-livereload": "*",
     "gulp-plumber": "^1.1.0",
+    "gulp-pug": "^3.0.2",
     "gulp-sass": "*",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "*",
@@ -58,8 +59,8 @@
     "node-sass-middleware": "^0.9.8",
     "npm": "^3.8.8",
     "pug": "^2.0.0-alpha7",
-    "resin-device-config": "^3.0.1",
     "raspi-io": "*",
+    "resin-device-config": "^3.0.1",
     "serialport": "*",
     "serve-favicon": "^2.3.0",
     "socketio": "^1.0.0",
