--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "edison-expressLEDs",
-  "version": "0.0.2",
-  "description": "Simple LED blink in node.js with resin.io on Intel Edison",
+  "name": "rpi-lighthub",
+  "version": "0.1.0",
+  "description": "Simple LED blink in node.js with resin.io on pi3",
   "main": "main.js",
   "scripts": {
     "prestart": "gulp",
@@ -53,7 +53,7 @@
     "method-override": "^2.3.5",
     "morgan": "^1.7.0",
     "multer": "^1.1.0",
-    "node-sass": "^3.7.0",
+    "node-sass": "*",
     "npm": "^3.8.8",
     "pug": "^2.0.0-alpha7",
     "raspi-io": "*",
