--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -1,13 +1,9 @@
-FROM resin/raspberrypi3-node:latest
+FROM resin/raspberrypi3-node:6.0.0
 
 # Enable systemd
 ENV INITSYSTEM on
 
 # Your code goes here
-
-RUN curl -sL https://deb.nodesource.com/setup_6.x | sudo -E bash -
-RUN apt-get install -y nodejs
-
 
 # RUN apt-get update && apt-get install rsync libpcre3-dev git make cmake gcc build-essential g++ swig ntp python2.7-dev
 # RUN apt-get upgrade nodejs
