--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
       ]
     ]
   },
-  "author": "",
-  "license": "ISC",
-  "repository": "https://github.com/gunderson/edison-expressleds",
+  "author": "Patrik Gunderson",
+  "license": "Copyright 2016",
+  "repository": "https://github.com/gunderson/rpi3-lighthub-resin.git",
   "dependencies": {
     "babel": "^6.5.2",
     "babel-preset-es2015": "^6.6.0",
@@ -40,7 +40,7 @@
     "gulp-livereload": "*",
     "gulp-plumber": "^1.1.0",
     "gulp-pug": "^3.0.2",
-    "gulp-rename": "^1.2.2",
+    "gulp-rename": "github:gunderson/gulp-rename",
     "gulp-sass": "*",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "*",
