--- a/package.json
+++ b/package.json
@@ -1,78 +1,83 @@
 {
-	"name": "rpi-lighthub",
-	"version": "0.1.0",
-	"description": "Simple LED blink in node.js with resin.io on pi3",
-	"main": "main.js",
-	"scripts": {
-		"prestart": "gulp",
-		"start": "node --harmony ./dist/start"
-	},
-	"browserify": {
-		"transform": [
-			[
-				"babelify", {
-					"presets": ["es2015"]
-				}
-			]
-		]
-	},
-	"author": "Patrik Gunderson",
-	"license": "Copyright 2016",
-	"repository": "https://github.com/gunderson/rpi3-lighthub-resin.git",
-	"dependencies": {
-		"babel": "^6.5.2",
-		"babel-preset-es2015": "^6.6.0",
-		"babelify": "^7.3.0",
-		"backbone-events-standalone": "^0.2.7",
-		"body-parser": "^1.15.0",
-		"browserify": "^13.0.1",
-		"express": "^4.13.4",
-		"graceful-fs": "^4.1.3",
-		"gulp": "*",
-		"gulp-babel": "^6.1.2",
-		"gulp-browserify": "^0.5.1",
-		"gulp-concat": "*",
-		"gulp-csso": "*",
-		"gulp-jst-concat": "github:gunderson/gulp-jst-concat",
-		"gulp-livereload": "*",
-		"gulp-plumber": "^1.1.0",
-		"gulp-pug": "^3.0.2",
-		"gulp-rename": "github:gunderson/gulp-rename",
-		"gulp-sass": "*",
-		"gulp-sourcemaps": "^1.6.0",
-		"gulp-uglify": "*",
-		"gulp-util": "^3.0.7",
-		"johnny-five": "^0.9.44",
-		"jquery": "^2.2.3",
-		"lirc_node": "0.0.4",
-		"lodash": "^4.11.2",
-		"marked": "^0.3.5",
-		"method-override": "^2.3.5",
-		"morgan": "^1.7.0",
-		"multer": "^1.1.0",
-		"node-sass": "*",
-		"npm": "^3.8.8",
-		"pug": "^2.0.0-alpha7",
-		"raspi-io": "*",
-		"resin-device-config": "^3.0.1",
-		"serialport": "*",
-		"serve-favicon": "^2.3.0",
-		"socketio": "^1.0.0",
-		"tiny-lr": "*",
-		"vinyl-buffer": "^1.0.0",
-		"vinyl-named": "^1.1.0",
-		"vinyl-source-stream": "^1.1.0"
-	},
-	"domains": {
-		"front-end": {
-			"serverPort": 80,
-			"address": "10.0.1.8",
-			"lrPort": 35729
-		},
-		"api": {
-			"serverPort": 3000,
-			"address": "10.0.1.8",
-			"lrPort": 35728
-		}
-	}
+  "name": "rpi-lighthub",
+  "version": "0.1.0",
+  "description": "Simple LED blink in node.js with resin.io on pi3",
+  "main": "main.js",
+  "scripts": {
+    "prestart": "gulp",
+    "start": "node --harmony ./dist/start"
+  },
+  "browserify": {
+    "transform": [
+      [
+        "babelify",
+        {
+          "presets": [
+            "es2015"
+          ]
+        }
+      ]
+    ]
+  },
+  "author": "Patrik Gunderson",
+  "license": "Copyright 2016",
+  "repository": "https://github.com/gunderson/rpi3-lighthub-resin.git",
+  "dependencies": {
+    "babel": "^6.5.2",
+    "babel-preset-es2015": "^6.6.0",
+    "babelify": "^7.3.0",
+    "backbone-events-standalone": "^0.2.7",
+    "body-parser": "^1.15.0",
+    "browserify": "^13.0.1",
+    "domain": "0.0.1",
+    "express": "^4.13.4",
+    "graceful-fs": "^4.1.3",
+    "gulp": "*",
+    "gulp-babel": "^6.1.2",
+    "gulp-browserify": "^0.5.1",
+    "gulp-concat": "*",
+    "gulp-csso": "*",
+    "gulp-jst-concat": "github:gunderson/gulp-jst-concat",
+    "gulp-livereload": "*",
+    "gulp-plumber": "^1.1.0",
+    "gulp-pug": "^3.0.2",
+    "gulp-rename": "github:gunderson/gulp-rename",
+    "gulp-sass": "*",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-tap": "^0.1.3",
+    "gulp-uglify": "*",
+    "gulp-util": "^3.0.7",
+    "johnny-five": "^0.9.44",
+    "jquery": "^2.2.3",
+    "lirc_node": "0.0.4",
+    "lodash": "^4.11.2",
+    "marked": "^0.3.5",
+    "method-override": "^2.3.5",
+    "morgan": "^1.7.0",
+    "multer": "^1.1.0",
+    "node-sass": "*",
+    "npm": "^3.8.8",
+    "pug": "^2.0.0-alpha7",
+    "raspi-io": "*",
+    "resin-device-config": "^3.0.1",
+    "serialport": "*",
+    "serve-favicon": "^2.3.0",
+    "socketio": "^1.0.0",
+    "tiny-lr": "*",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-named": "^1.1.0",
+    "vinyl-source-stream": "^1.1.0"
+  },
+  "domains": {
+    "front-end": {
+      "serverPort": 80,
+      "address": "10.0.1.8",
+      "lrPort": 35729
+    },
+    "api": {
+      "serverPort": 3000,
+      "address": "10.0.1.8",
+      "lrPort": 35728
+    }
+  }
 }
