--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"start": "gulp --env prod && node --harmony ./dist/start --env prod",
 		"stage": "gulp --env stage && node --harmony ./dist/start --env stage",
 		"dev": "gulp --env dev && node --harmony ./dist/start --env dev",
-		"watch": "gulp --env dev && gulp watch --env dev | node --harmony ./dist/start --env dev"
+		"watch": "gulp --env dev && (gulp watch --env dev &) && node --harmony ./dist/start --env dev -d 'front-end'"
 	},
 	"browserify": {
 		"transform": [
@@ -21,23 +21,22 @@
 		]
 	},
 	"browser": {
-		"TweenMax": "./node_modules/gsap/src/uncompressed/TweenMax.js",
-		"TweenLite": "./node_modules/gsap/src/uncompressed/TweenLite.js",
-		"jquery.gsap": "./node_modules/gsap/src/uncompressed/jquery.gsap.js",
+		"TweenMax": "./node_modules/gsap/src/minified/TweenMax.min.js",
+		"jquery.gsap": "./node_modules/gsap/src/minified/jquery.gsap.min.js",
 		"jquery.browser": "./node_modules/jquery.browser/dist/jquery.browser.js",
 		"howler": "./node_modules/howler/howler.js"
 	},
 	"author": "Patrik Gunderson",
-	"license": "Copyright",
+	"license": "MIT",
 	"repository": "https://github.com/gunderson/rpi3-lighthub-resin.git",
 	"dependencies": {
 		"babel": "^6.5.2",
+		"babel-core": "^6.8.0",
 		"babel-preset-es2015": "^6.6.0",
 		"babelify": "^7.3.0",
 		"backbone-events-standalone": "^0.2.7",
 		"body-parser": "^1.15.0",
 		"browserify": "^13.0.1",
-		"colors": "^1.1.2",
 		"domain": "0.0.1",
 		"express": "^4.13.4",
 		"git-web-hooks": "0.0.3",
@@ -60,6 +59,7 @@
 		"howler": "^1.1.29",
 		"johnny-five": "^0.9.44",
 		"jquery": "^2.2.3",
+		"jquery.browser": "^0.1.0",
 		"lirc_node": "0.0.4",
 		"lodash": "^4.11.2",
 		"marked": "^0.3.5",
@@ -82,15 +82,18 @@
 	},
 	"domains": {
 		"front-end": {
-			"serverPort": 3000,
+			"port": 3000,
 			"address": "10.0.1.14",
 			"lrPort": 35729
 		},
-		"api": {
-			"serverPort": 3001,
+		"device": {
+			"port": 3001,
 			"address": "10.0.1.14",
-			"lrPort": 35728,
-			"jspackage": "copy"
+			"lrPort": 35728
+		},
+		"webhooks": {
+			"port": 3333,
+			"address": "10.0.1.14"
 		}
 	}
 }
