--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -47,13 +47,6 @@ RUN npm set progress=false && npm update && npm install -g gulp node-gyp
 COPY package.json /usr/src/app/package.json
 COPY gulpfile.js /usr/src/app/gulpfile.js
 
-# Set the working directory in container
-
-WORKDIR /usr/src/app
-
-# Copy all files in build server to the working  directory in the container
-
-COPY . ./
 
 # make the working dir a git repo to pull updates from
 
@@ -66,12 +59,22 @@ RUN git init \
 && git branch --set-upstream-to=origin/master \
 && git reset --hard origin/master
 
-COPY ./git/. ./.git/
+# COPY ./git/. ./.git/
 
 # install npm dependencies on the build server, and clean up the
 # artifacts it creates in order to reduce the image size.
 
-RUN npm set progress=false && JOBS=MAX npm install --unsafe-perm && npm cache clean && rm -rf /tmp/*
+RUN npm set progress=false
+RUN JOBS=MAX npm install --unsafe-perm
+RUN npm cache clean && rm -rf /tmp/*
+
+# Set the working directory in container
+
+WORKDIR /usr/src/app
+
+# Copy all files in build server to the working  directory in the container
+
+COPY . ./
 
 EXPOSE 3000
 EXPOSE 3001
