--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -47,17 +47,16 @@ RUN npm set progress=false && npm update && npm install -g gulp node-gyp
 COPY package.json /usr/src/app/package.json
 COPY gulpfile.js /usr/src/app/gulpfile.js
 
+# Set the working directory in container
+
+WORKDIR /usr/src/app
 
 # make the working dir a git repo to pull updates from
 
 RUN git init \
 && git config user.email "pat@theorigin.net" && git config user.name "gunderson" \
-&& git remote add origin https://github.com/gunderson/rpi3-lighthub-resin.git \
-&& git add . \
-&& git commit -m 'tmp' \
-&& git fetch --depth=1 \
-&& git branch --set-upstream-to=origin/master \
-&& git reset --hard origin/master
+&& git remote add origin https://github.com/gunderson/rpi3-lighthub-resin.git
+&& git branch --set-upstream-to=origin/master
 
 # COPY ./git/. ./.git/
 
@@ -68,13 +67,11 @@ RUN npm set progress=false
 RUN JOBS=MAX npm install --unsafe-perm
 RUN npm cache clean && rm -rf /tmp/*
 
-# Set the working directory in container
 
-WORKDIR /usr/src/app
 
 # Copy all files in build server to the working  directory in the container
 
-COPY . ./
+COPY . /usr/src/app
 
 EXPOSE 3000
 EXPOSE 3001
