--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -55,7 +55,7 @@ WORKDIR /usr/src/app
 
 RUN git init \
 && git config user.email "pat@theorigin.net" && git config user.name "gunderson" \
-&& git remote add origin https://github.com/gunderson/rpi3-lighthub-resin.git
+&& git remote add origin https://github.com/gunderson/rpi3-lighthub-resin.git \
 && git branch --set-upstream-to=origin/master
 
 # COPY ./git/. ./.git/
