updated some git stuff

--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -57,6 +57,7 @@ RUN git init \
 && git config user.email "pat@theorigin.net" && git config user.name "gunderson" \
 && git remote add origin https://github.com/gunderson/rpi3-lighthub-resin.git \
 && git checkout master \
+&& git reset --hard origin/master \
 && git branch --set-upstream-to=origin/master
 
 # COPY ./git/. ./.git/
