updated some git stuff

--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -55,10 +55,9 @@ WORKDIR /usr/src/app
 
 RUN git init \
 && git config user.email "pat@theorigin.net" && git config user.name "gunderson" \
-&& git remote add origin https://github.com/gunderson/ditkajs-client.git \
-# && git add . \
-# && git commit -m 'tmp' \
-&& git checkout master \
+&& git remote add origin https://github.com/gunderson/ditkajs-client.git
+RUN git add . \
+&& git commit -m 'tmp' \
 && git fetch --depth=1 \
 && git branch --set-upstream-to=origin/master \
 && git reset --hard origin/master
